--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
-    "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend && tsc",
+    "build": "npm install && (cd ../frontend && npm install && npm run build) && tsc",
     "start": "node distt/index.js"
   },
   "keywords": [],
